--- a/themes/thefoxgang/layouts/partials/header.html
+++ b/themes/thefoxgang/layouts/partials/header.html
@@ -5,24 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Website for Tyler Evert, Software (DevOps) Engineer in Wisconsin">
+
     <meta name="author" content="Tyler Evert">
 
-    <title>The Foxgang</title>
+    <title>{{ .Title }} | The Foxgang</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 
+    <link rel="canonical" href="{{ .Permalink }}">
+    <base href="{{ .Site.BaseURL }}">
+    {{ .Hugo.Generator }}
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="/css/small-business.css" rel="stylesheet">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+    {{ "<!--[if lt IE 9]>" | safeHTML }}
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    {{ "<![endif]-->" | safeHTML }}
 </head>
 
 <body>
