I've mostly figured out layouts!

--- a/themes/thefoxgang/layouts/partials/header.html
+++ b/themes/thefoxgang/layouts/partials/header.html
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/blog/serverless-architecture" title="Blog"><img src="/img/google-blog-search-48.png" alt="Blog" height="40"/></a>
+                        <a href="/blog/" title="Blog"><img src="/img/google-blog-search-48.png" alt="Blog" height="40"/></a>
                     </li>
                     <li>
                         <a href="https://github.com/tevert" target="_blank" title="Github"><img src="/img/GitHub-Mark-Light-64px.png" alt="Github" height="40"/></a>
