--- a/themes/thefoxgang/static/css/small-business.css
+++ b/themes/thefoxgang/static/css/small-business.css
@@ -25,6 +25,14 @@ h1,h2,h3,h4,h5 {
     color: #CC4025;
 }
 
+a {
+    color: #CC4025;
+    text-decoration: underline;
+}
+a:hover {
+    color: black;
+}
+
 .panel {
     background-color: #888888;
 }
