--- a/themes/thefoxgang/static/css/small-business.css
+++ b/themes/thefoxgang/static/css/small-business.css
@@ -10,7 +10,7 @@
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
-    background: #884025;
+    background: #7C1300;
 }
 
 .content {
