--- a/themes/thefoxgang/static/css/small-business.css
+++ b/themes/thefoxgang/static/css/small-business.css
@@ -25,6 +25,7 @@ body {
 h1 {
     font-size: 5em;
 }
+
 h1,h2,h3,h4,h5 {
     color: #CC4025;
 }
@@ -80,6 +81,14 @@ footer {
 
     .nav.navbar-nav li {
         text-align: right;
+    }
+
+    h1 {
+        font-size: 3em;
+    }
+
+    .content.container img {
+        width: 100%;
     }
 }
 
